<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:paddingStart="10dp"
    tools:context="com.example.jacob.foodsbychallenge.MainActivity">

    <LinearLayout
        android:id="@+id/LinLayout1V"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/locationLine1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/pt_sans_web_regular"
                android:paddingBottom="3px"
                android:text="@string/locationMain"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/locationLine2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/locationLine1"
                android:layout_below="@+id/locationLine1"
                android:fontFamily="@font/pt_sans_web_regular"
                android:text="@string/locationSecondary"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/locationLine2"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/locationLine1"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:paddingBottom="15px"
                android:paddingTop="15px"
                android:scaleType="centerInside"
                app:srcCompat="@mipmap/location_icon" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mondayBtn"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_focus"
                    android:fontFamily="@font/pt_sans_web_regular"
                    android:onClick="onDayClick"
                    android:singleLine="true"
                    android:stateListAnimator="@null"
                    android:text="@string/monday" />

                <Button
                    android:id="@+id/tuesdayBtn"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_focus"
                    android:fontFamily="@font/pt_sans_web_regular"
                    android:onClick="onDayClick"
                    android:singleLine="true"
                    android:stateListAnimator="@null"
                    android:text="@string/tuesday" />

                <Button
                    android:id="@+id/wednesdayBtn"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_focus"
                    android:fontFamily="@font/pt_sans_web_regular"
                    android:onClick="onDayClick"
                    android:singleLine="true"
                    android:stateListAnimator="@null"
                    android:text="@string/wednesday" />

                <Button
                    android:id="@+id/thursdayBtn"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_focus"
                    android:fontFamily="@font/pt_sans_web_regular"
                    android:onClick="onDayClick"
                    android:singleLine="true"
                    android:stateListAnimator="@null"
                    android:text="@string/thursday" />

                <Button
                    android:id="@+id/fridayBtn"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_focus"
                    android:fontFamily="@font/pt_sans_web_regular"
                    android:onClick="onDayClick"
                    android:singleLine="true"
                    android:stateListAnimator="@null"
                    android:text="@string/friday" />

            </LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/listViewContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="5.0sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
