<resources>
    <string name="app_name">Foodsby</string>
    <string name="locationMain">5700 Boradmoor - Mission Towers</string>
    <string name="locationSecondary">5700 Boradmoor Street, Mission KS</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="today">Today</string>
    <string name="sold_out">Sold Out!</string>
    <string name="selling_out">Selling Out!</string>
    <string name="is_past_cutoff">Past Cutoff</string>
    <string name="order_placed">Placed Order</string>
    <string name="order_now">Order</string>
</resources>
